--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container-fluid img">
+      <div class="row d-block bg-none"></div>
+      <div class="row">
+        <div class="col d-flex align-items-center content"><h1 class="img-h1">HLVTATTOO</h1></div>
+        <div class="col-12 text-center">
+          <button class="main-button">Concertar Cita</button>
+          <button class="main-button">Acerca de</button>
+        </div>
+      </div>
+      
+    </div>
     <div class="container-fluid main">
       <div class="row">
         <nav class="navbar navbar-dark fixed-top d-block ">
@@ -127,7 +138,7 @@
     <div class="container-fluid img">
       <div class="row d-block bg-none"></div>
       <div class="row">
-        <div class="col d-flex align-items-center content text-white">hola</div>
+        <div class="col d-flex align-items-center content"><h1 class="img-h1">HLVTATTOO</h1></div>
         <div class="col-12 text-center">
           <button class="main-button">Concertar Cita</button>
           <button class="main-button">Acerca de</button>
@@ -138,4 +149,5 @@
     
   </body>
 </html>
+
 
