--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <body>
     <div class="container-fluid main">
       <div class="row">
-        <nav class="navbar navbar-dark fixed-top">
+        <nav class="navbar navbar-dark fixed-top pb-5">
           <div class="container-fluid">
             <a class="navbar-brand text-white" href="index.html"
               ><img
                 src="hlvLogo.PNG"
-                style="width: 11vh; height: 10vh"
+                style="width: 11vh; height: 11vh"
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
             /></a>
@@ -131,13 +131,12 @@
         </div>
         <div class="col-12 text-center">
           <button class="main-button">Tattoo</button>
-
           <button class="main-button">Piercings</button>
         </div>
       </div>
     </div>
 
-    <div class="container-fluid img d-flex pt-5 align-items-center">
+    <div class="container-fluid img d-flex  justify-content-space-around">
       <div class="col-12">
         <div class="row-12">
           <video muted autoplay loop>
