--- a/index.html
+++ b/index.html
@@ -22,107 +22,17 @@
   <body>
     <div class="container-fluid main">
       <div class="row">
-        <nav class="navbar navbar-dark fixed-top">
+       <nav class="navbar navbar-dark fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand text-white" href="index.html"
               ><img
                 src="hlvLogo.PNG"
-                style="width: 13vh; height: 12vh;"
+                style="width: 13vh; height: 12vh"
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
             /></a>
-            <button
-              title="boton"
-              class="navbar-toggler text-secondary bg-black"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasNavbar"
-              aria-controls="offcanvasNavbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div
-              class="offcanvas offcanvas-end bg-light"
-              tabindex="-1"
-              id="offcanvasNavbar"
-              aria-labelledby="offcanvasNavbarLabel"
-            >
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title text-dark" id="offcanvasNavbarLabel">
-                  Offcanvas
-                </h5>
-                <button
-                  type="button"
-                  class="btn-close text-reset text-white"
-                  data-bs-dismiss="offcanvas"
-                  aria-label="Close"
-                ></button>
-              </div>
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-2">
-                  <form class="d-flex mb-2">
-                    <input
-                      class="form-control"
-                      type="search"
-                      placeholder="Search"
-                      aria-label="Search"
-                    />
-                    <button
-                      type="button"
-                      class="btn btn-primary me-1"
-                      type="submit"
-                    >
-                      Primary
-                    </button>
-                  </form>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active text-muted"
-                      aria-current="page"
-                      href="#"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-muted" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle text-muted"
-                      href="#"
-                      id="offcanvasNavbarDropdown"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Dropdown
-                    </a>
-                    <ul
-                      class="dropdown-menu"
-                      aria-labelledby="offcanvasNavbarDropdown"
-                    >
-                      <li>
-                        <a class="dropdown-item text-muted" href="#">Action</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item text-muted" href="#"
-                          >Another action</a
-                        >
-                      </li>
-                      <li>
-                        <hr class="dropdown-divider" />
-                      </li>
-                      <li>
-                        <a class="dropdown-item text-muted" href="#"
-                          >Something else here</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
           </div>
+          <a href="carta.JPG" download="CartaPreciosHLVTattoo">CATÁLOGO</a>
         </nav>
       </div>
       <div class="row">
@@ -130,8 +40,14 @@
           <h1 class="img-h1">HLVTATTOO</h1>
         </div>
         <div class="col-12 text-center">
+          <a href="https://wa.me/34611601309?text=Te escribía interesado
+          para concertar una cita para un tattoo">
           <button class="main-button">Tattoo</button>
-          <button class="main-button">Piercings</button>
+        </a>
+          <a href="https://wa.me/34611601309?text=Te escribía interesado
+          para concertar una cita para un Piercing">
+          <button class="main-button">Piercing</button>
+        </a>
         </div>
       </div>
     </div>
