--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid main">
       <div class="row">
        <nav class="navbar navbar-dark fixed-top">
-          <div class="container-fluid">
+          <div class="container-fluid d-flex align-items-center justify-content-between m-1 p-1">
             <a class="navbar-brand text-white" href="index.html"
               ><img
                 src="hlvLogo.PNG"
