--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-
+    <link rel="icon" href="hlvLogo.PNG">
     <title>Document</title>
   </head>
   <body>
@@ -31,7 +31,7 @@
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
             /></a>
-          <a href="carta.JPG" download="CartaPreciosHLVTattoo">CATÁLOGO</a>
+          <a href="carta.JPG" download="CartaPreciosHLVTattoo">Precios</a>
           </div>
         </nav>
       </div>
