--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
             /></a>
-          <a href="carta.JPG" download="CartaPreciosHLVTattoo">Precios</a>
+          <a href="carta.JPG" download="CartaPreciosHLVTattoo">CARTA DE PRECIOS</a>
           </div>
         </nav>
       </div>
