--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
+    <title>HuelvaTattoo</title>
     <link rel="icon" href="hlvLogo.PNG">
-    <title>Document</title>
   </head>
   <body>
     <div class="container-fluid main">
