--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
           <h1 class="img-h1">HLVTATTOO</h1>
         </div>
         <div class="col-12 text-center">
+         <a href="https://wa.me/34611601309?text=Te escribía interesado
+          para concertar una cita para un tattoo">
           <button class="main-button">Tattoo</button>
-          <button class="main-button">Piercings</button>
+        </a>
+          <a href="https://wa.me/34611601309?text=Te escribía interesado
+          para concertar una cita para un Piercing">
+          <button class="main-button">Piercing</button>
         </div>
       </div>
     </div>
