--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
           <h1 class="img-h1">HLVTATTOO</h1>
         </div>
         <div class="col-12 text-center">
-         <a href="https://wa.me/34611601309?text=Te escribía interesado
+          <a href="https://wa.me/34611601309?text=Te escribía interesado
           para concertar una cita para un tattoo">
           <button class="main-button">Tattoo</button>
         </a>
           <a href="https://wa.me/34611601309?text=Te escribía interesado
           para concertar una cita para un Piercing">
           <button class="main-button">Piercing</button>
+        </a>
         </div>
       </div>
     </div>
@@ -78,10 +79,10 @@
       <img src="rayo.JPG" alt="" srcset="" />
       <img src="sacrificio.JPG" alt="" srcset="" />
       <img src="silueta.JPG" alt="" srcset="" />
+      <img src="arrow.JPG" alt="" srcset="" />
+      <img src="h20.JPG" alt="" srcset="" />
       <img src="letters.JPG" alt="" srcset="" />
       <img src="cat.JPG" alt="" srcset="" />
-      
-    
   </div>
 
 
