--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a href="#piercings">PIERCINGS</a>
               <a href="#mTattoo">MINITATTOO</a>
             </section>
-            <a href="carta.JPG" download="CartaPreciosHLVTattoo">CARTA DE PRECIOS</a>
+            <a href="carta.JPG" download="CartaPreciosHLVTattoo">PRECIOS</a>
             </div>
         </nav>
       </div>
