--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
             /></a>
-            <section class="util d-none d-md-flex">
-              <a href="#main">INICIO</a>
+            <section class="util d-none d-md-flex">              
               <a href="#tattoo">TATTOO</a>
               <a href="#piercings">PIERCINGS</a>
+              <a href="#mediano">MEDIANOS</a>
               <a href="#mTattoo">MINITATTOO</a>
             </section>
-            <a href="carta.JPG" download="CartaPreciosHLVTattoo">PRECIOS</a>
+            <a href="carta.JPG" download="CartaPreciosHLVTattoo">CARTA DE PRECIOS</a>
             </div>
         </nav>
       </div>
@@ -49,12 +49,10 @@
           <h1 class="img-h1">HLVTATTOO</h1>
         </div>
         <div class="col-12 text-center">
-          <a href="https://wa.me/34611601309?text=Te escribía interesado
-          para concertar una cita para un tattoo">
+          <a href="https://wa.me/34611601309?text=Te escribía interesado para concertar una cita para un tattoo">
           <button class="main-button">Tattoo</button>
         </a>
-          <a href="https://wa.me/34611601309?text=Te escribía interesado
-          para concertar una cita para un Piercing">
+          <a href="https://wa.me/34611601309?text=Te escribía interesado para concertar una cita para un Piercing">
           <button class="main-button">Piercing</button>
         </a>
         </div>
@@ -65,16 +63,35 @@
         <img src="tigre.png" alt="" srcset="" />
         <img src="backDragon.png" alt="" srcset="" />
         <img src="flores.jpg" alt="" srcset="" />
-        <img src="egypt.png" alt="" srcset="" />
+        <img src="pooker.png" alt="" srcset="" />
         <img src="pajaro.png" alt="" srcset="" />
         <img src="espalda.png" alt="" srcset="" />
         <img src="ojo.png" alt="" srcset="" />
         <img src="knife.png" alt="" srcset="" />
         <img src="tiger.png" alt="" srcset="" />
 
-        
-      
     </div>
+
+    <div class="container-fluid img d-flex" id="piercing">
+      <img src="septum.png" alt="" srcset="" />
+      <img src="ombligo.png" alt="" srcset="" />
+      <img src="nariz.png" alt="" srcset="" />
+      <img src="oreja.png" alt="" srcset="" />
+      <img src="pezon.png" alt="" srcset="" />
+  </div>
+
+    <div class="container-fluid img d-flex" id="mediano">
+      <img src="katana.png" alt="" srcset="" />
+      <img src="brain.png" alt="" srcset="" />
+      <img src="donald.png" alt="" srcset="" />
+      <img src="world.png" alt="" srcset="" />
+      <img src="conch.png" alt="" srcset="" />
+      <img src="baby.png" alt="" srcset="" />
+      <img src="estrella.png" alt="" srcset="" />
+      <img src="rostro.png" alt="" srcset="" />
+
+  </div>
+
     <div class="container-fluid img d-flex" id="mTattoo">
       <img src="rayo.JPG" alt="" srcset="" />
       <img src="sacrificio.JPG" alt="" srcset="" />
@@ -88,3 +105,4 @@
 
   </body>
 </html>
+
