--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="row">
         <nav class="navbar navbar-dark fixed-top">
           <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a class="navbar-brand text-white" href="index.html"
+            <a class="navbar-brand text-white" href="#main"
               ><img
                 src="hlvLogo.PNG"
                 style="width: 10vh; height: 10vh;"
@@ -40,7 +40,7 @@
               <a href="#mediano">MEDIANOS</a>
               <a href="#mTattoo">MINITATTOO</a>
             </section>
-            <a href="carta.JPG" download="CartaPreciosHLVTattoo">CARTA DE PRECIOS</a>
+            <a href="carta.JPG" download="CartaPreciosHLVTattoo">PRECIOS</a>
             </div>
         </nav>
       </div>
