--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     </div>
 
-    <div class="container-fluid img d-flex" id="piercing">
+    <div class="container-fluid img d-flex" id="piercings">
       <img src="septum.png" alt="" srcset="" />
       <img src="ombligo.png" alt="" srcset="" />
       <img src="nariz.png" alt="" srcset="" />
