--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <img src="flores.jpg" alt="" srcset="" />
         <img src="pooker.png" alt="" srcset="" />
         <img src="pajaro.png" alt="" srcset="" />
+        <img src="poseidon.png" alt="" srcset="" />
         <img src="espalda.png" alt="" srcset="" />
         <img src="ojo.png" alt="" srcset="" />
         <img src="knife.png" alt="" srcset="" />
