--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div
             class="container-fluid d-flex align-items-center justify-content-between"
           >
-            <a class="navbar-brand" href="index.html"
+            <a class="navbar-brand" href="#main"
               ><img
                 src="hlvLogo.PNG"
                 style="width: 10vh; height: 10vh"
