--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="navbar-brand" href="#main"
               ><img
                 src="hlvLogo.PNG"
-                style="width: 10vh; height: 10vh"
+                style="width: 10vh; height: 11vh"
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
             /></a>
@@ -72,12 +72,14 @@
     <div class="container-fluid img d-flex" id="tattoo">
       <img src="tigre.png" alt="" srcset="" />
       <img src="backDragon.png" alt="" srcset="" />
-      <img src="flores.jpg" alt="" srcset="" />
       <img src="pooker.png" alt="" srcset="" />
-      <img src="pajaro.png" alt="" srcset="" />
-      <img src="espalda.png" alt="" srcset="" />
+      <img src="dragonOrn.png" alt="" srcset="" />
+      <img src="paloma.png" alt="" srcset="" />
+      <img src="flores.jpg" alt="" srcset="" />
       <img src="ojo.png" alt="" srcset="" />
-      <img src="knife.png" alt="" srcset="" />
+      <img src="dragonCoc.png" alt="" srcset="" /> 
+      <img src="tigerClock.png" alt="" srcset="" />
+      <img src="hannya.png" alt="" srcset="" />
       <img src="poseidon.png" alt="" srcset="" />
     </div>
 
@@ -93,6 +95,7 @@
       <img src="katana.png" alt="" srcset="" />
       <img src="brain.png" alt="" srcset="" />
       <img src="donald.png" alt="" srcset="" />
+      <img src="cora.png" alt="" srcset="" />
       <img src="world.png" alt="" srcset="" />
       <img src="conch.png" alt="" srcset="" />
       <img src="baby.png" alt="" srcset="" />
