--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
       <img src="backDragon.png" alt="" srcset="" />
       <img src="pooker.png" alt="" srcset="" />
       <img src="dragonOrn.png" alt="" srcset="" />
-      <img src="paloma.png" alt="" srcset="" />
+      <img src="paloma.JPEG" alt="" srcset="" />
       <img src="flores.jpg" alt="" srcset="" />
-      <img src="ojo.png" alt="" srcset="" />
+      <img src="buho.png" alt="" srcset="" />
       <img src="dragonCoc.png" alt="" srcset="" /> 
-      <img src="tigerClock.png" alt="" srcset="" />
+      <img src="tigerClock.JPEG" alt="" srcset="" />
       <img src="hannya.png" alt="" srcset="" />
       <img src="poseidon.png" alt="" srcset="" />
     </div>
