--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
               <a  href="#mTattoo">MINITATTOO</a>
               <a href="#reseñas">RESEÑAS</a>
             </section>
-            <a href="carta.JPG" download="CartaPreciosHLVTattoo">PRECIOS</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Precios
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="sesiones.JPEG">Sesiones</a>
+          <a class="dropdown-item" href="piercings.JPEG">Piercings</a>
           </div>
         </nav>
       </div>
