--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <a class="dropdown-item" href="sesiones.JPEG">Sesiones</a>
           <a class="dropdown-item" href="piercings.JPEG">Piercings</a>
           </div>
+            </div>
         </nav>
       </div>
       <div class="row">
