--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Precios
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="sesiones.JPEG">Sesiones</a>
-          <a class="dropdown-item" href="piercings.JPEG">Piercings</a>
-          </div>
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Precios
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-dark" href="sesiones.JPEG" download>Sesiones</a>
+              <a class="dropdown-item text-dark" href="piercings.JPEG" download>Piercings</a>
             </div>
         </nav>
       </div>
