--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button class="btn btn-secondary dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Precios
             </button>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-right dropdown-menu-end" aria-labelledby="navbarDropdown">
               <a class="dropdown-item text-dark" href="sesiones.JPEG" download>Sesiones</a>
               <a class="dropdown-item text-dark" href="piercings.JPEG" download>Piercings</a>
             </div>
