--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="hlvLogo.PNG" />
@@ -51,8 +53,8 @@
               Precios
             </button>
             <div class="dropdown-menu dropdown-menu-right dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-dark" href="sesiones.JPEG" download>Sesiones</a>
-              <a class="dropdown-item text-dark" href="piercings.JPEG" download>Piercings</a>
+              <a class="dropdown-item text-dark" href="sesiones.JPEG" download="sesiones.JPEG">Sesiones</a>
+              <a class="dropdown-item text-dark" href="piercings.JPEG" download="piercings.JPEG">Piercings</a>
             </div>
         </nav>
       </div>
