--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               Precios
             </button>
             <div class="dropdown-menu dropdown-menu-right dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-dark" href="sesiones.JPEG" download="sesiones.JPEG">Sesiones</a>
-              <a class="dropdown-item text-dark" href="piercings.JPEG" download="piercings.JPEG">Piercings</a>
+              <a class="dropdown-item text-dark"  download="sesiones.JPEG">Sesiones</a>
+              <a class="dropdown-item text-dark" download="piercings.JPEG">Piercings</a>
             </div>
         </nav>
       </div>
