--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a  href="#mTattoo">MINITATTOO</a>
               <a href="#reseñas">RESEÑAS</a>
             </section>
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn btn-dark dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Precios
             </button>
             <div class="dropdown-menu dropdown-menu-right dropdown-menu-end" aria-labelledby="navbarDropdown">
