--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="hlvLogo.PNG" />
+    <link rel="icon" href="hlvLogo2.png" />
     <title>HuelvaTattoo</title>
   </head>
   <body>
@@ -37,7 +37,7 @@
           >
             <a class="navbar-brand" href="#main"
               ><img
-                src="hlvLogo.PNG"
+                src="hlvLogo2.png"
                 style="width: 10vh; height: 11vh"
                 alt="huelva tattoo"
                 srcset="huelva tattoo"
