--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" href="hlvlogo2.png" />
     <title>HuelvaTattoo</title>
   </head>
-  <body>
+  <body style="background-color:black;">
     <div class="container-fluid main" id="main">
       <div class="row">
         <nav class="navbar navbar-dark fixed-top">
