--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
               <a href="#reseñas">RESEÑAS</a>
             </section>
         <button class="btn btn-dark dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Precios
+              Enlaces
             </button>
             <div class="dropdown-menu dropdown-menu-right dropdown-menu-end" aria-labelledby="navbarDropdown">
               <a class="dropdown-item text-dark" href="sesiones.jpeg" download="sesiones.jpeg">Sesiones</a>
               <a class="dropdown-item text-dark" href="piercings.jpeg" download="piercings.jpeg">Piercings</a>
+              <a class="dropdown-item text-dark" href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="piercings.jpeg">Curso</a>
             </div>
         </nav>
       </div>
