--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="dropdown-menu dropdown-menu-right dropdown-menu-end" aria-labelledby="navbarDropdown">
               <a class="dropdown-item text-dark" href="sesiones.jpeg" download="sesiones.jpeg">Sesiones</a>
               <a class="dropdown-item text-dark" href="piercings.jpeg" download="piercings.jpeg">Piercings</a>
-              <a class="dropdown-item text-dark" href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="piercings.jpeg">Curso</a>
+              <a class="dropdown-item text-dark" href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="UnidadDidácticaCursoHUELVATATTOO.pdf">Curso</a>
             </div>
         </nav>
       </div>
