--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a href="#tattoo">SESIONES</a>
               <a href="#piercings">PIERCINGS</a>
               <a href="#mediano">MEDIANOS</a>
-              <a  href="#mTattoo">MINITATTOO</a>
+              <a  href="#mTattoo">MINITATTOOS</a>
               <a href="#reseñas">RESEÑAS</a>
             </section>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -82,7 +82,7 @@
                 <a class="nav-link" href="#mediano">MEDIANOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#mTattoo">MINITATTOO</a>
+                <a class="nav-link" href="#mTattoo">MINITATTOOS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#reseñas">RESEÑAS</a>
