--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a href="sesiones.jpeg" download="sesiones.jpeg" class="d-block py-2">PRECIO SESIONES</a>
               <a href="piercings.jpeg" download="piercings.jpeg" class="d-block py-2">PRECIO PIERCINGS</a>
               <a href="#footer"  class="d-block py-2">UBICACIÓN</a>
-              <a href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="UnidadDidácticaCursoHUELVATATTOO.pdf" class="d-block py-2">CURSO</a>
+              <a href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="UnidadDidácticaCursoHUELVATATTOO.pdf" class="d-block py-2">CURSOS</a>
             </div>
             
             <hr>
