--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a href="#tattoo">SESIONES</a>
               <a href="#piercings">PIERCINGS</a>
               <a href="#mediano">MEDIANOS</a>
-              <a  href="#mTattoo">MINITATTOOS</a>
+              <a  href="#mTattoo">MINITATTOO</a>
               <a href="#reseñas">RESEÑAS</a>
             </section>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -57,16 +57,15 @@
         </div>
         <!-- Menú offcanvas para móviles -->
       <div class="text-light offcanvas offcanvas-end " tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
+          <!-- <div class="offcanvas-header">
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
+          </div> -->
           <div class="offcanvas-body">
             <div class="top-links-mobile mb-4">
 
               <a href="sesiones.jpeg" download="sesiones.jpeg" class="d-block py-2">PRECIO SESIONES</a>
               <a href="piercings.jpeg" download="piercings.jpeg" class="d-block py-2">PRECIO PIERCINGS</a>
-              <a href="#footer"  class="d-block py-2">UBICACIÓN</a>
-              <a href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="UnidadDidácticaCursoHUELVATATTOO.pdf" class="d-block py-2">CURSOS</a>
+              <a href="UnidadDidácticaCursoHUELVATATTOO.pdf" download="UnidadDidácticaCursoHUELVATATTOO.pdf" class="d-block py-2">CURSO</a>
             </div>
             
             <hr>
@@ -82,10 +81,13 @@
                 <a class="nav-link" href="#mediano">MEDIANOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#mTattoo">MINITATTOOS</a>
+                <a class="nav-link" href="#mTattoo">MINITATTOO</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#reseñas">RESEÑAS</a>
+              </li>
+              <li class="nav-item">
+                 <a href="#footer"  class="nav-link">UBICACIÓN</a>
               </li>
             </ul>
           </div>
