--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
               <a href="sesiones.jpeg" download="sesiones.jpeg" class="d-block py-2">PRECIO SESIONES</a>
               <a href="piercings.jpeg" download="piercings.jpeg" class="d-block py-2">PRECIO PIERCINGS</a>
+              <a href="./curso.html"class="d-block py-2">CURSO</a>
               
             </div>
             
