--- a/curso.html
+++ b/curso.html
@@ -982,11 +982,11 @@
             conocimiento de la piel, diseño y arte, manejo del equipo y trato con
             clientes.
           </p>
-          <p class="about-text fade-in">
+          <!-- <p class="about-text fade-in">
             En la mayoría de los casos, un aprendiz pasa meses o incluso años en
             esta etapa antes de poder tatuar libremente a clientes de forma
             profesional.
-          </p>
+          </p> -->
           <div class="competencies">
            
             <div class="competency fade-in">
@@ -1199,4 +1199,5 @@
       window.addEventListener("resize", updateActiveDot);
     </script>
   </body>
+
 </html>
