--- a/index.html
+++ b/index.html
@@ -928,6 +928,28 @@
               >Contactar</a
             >
           </div>
+          <div
+        style="
+          position: absolute;
+          bottom: 2rem;
+          left: 50%;
+          transform: translateX(-50%);
+          display: flex;
+          align-items: center;
+        "
+      >
+        <img
+          src="./junta.jpeg"
+          alt="Andalucía"
+          style="width: 200px; margin: 0 0.5rem"
+        />
+        <img
+          src="./verde.jpeg"
+          alt="España"
+          style="width: 220px; margin: 0 0.5rem"
+        />
+      </div>
+    </div>
           
       </section>
 
@@ -1269,11 +1291,33 @@
             >
           </div>
         </div>
+        <div
+        style="
+          position: absolute;
+          bottom: 2rem;
+          left: 50%;
+          transform: translateX(-50%);
+          display: flex;
+          align-items: center;
+        "
+      >
+        <img
+          src="./junta.jpeg"
+          alt="Andalucía"
+          style="width: 200px; margin: 0 0.5rem"
+        />
+        <img
+          src="./verde.jpeg"
+          alt="España"
+          style="width: 220px; margin: 0 0.5rem"
+        />
+      </div>
+    </div>
       </section>
     </div>
 
     <!-- Footer -->
-    <div
+    <!-- <div
         style="
           position: absolute;
           bottom: 2rem;
@@ -1293,7 +1337,7 @@
           alt="España"
           style="width: 200px; margin: 0 0.5rem"
         />
-      </div>
+      </div> -->
 
     <script>
       // Mobile menu toggle
