--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
       }
 
       .course-content {
+        padding-top: 6vh ;
         max-height: 100%;
         overflow-x: visible;
         overflow-y: visible;
@@ -879,6 +880,7 @@
       <div
         style="
           position: absolute;
+          padding: 1vh;
           bottom: 2rem;
           left: 50%;
           transform: translateX(-50%);
@@ -889,12 +891,12 @@
         <img
           src="./junta.jpeg"
           alt="Andalucía"
-          style="width: 200px; margin: 0 0.5rem"
+          style="width: 180px; margin: 0 0.5rem"
         />
         <img
           src="./verde.jpeg"
           alt="España"
-          style="width: 220px; margin: 0 0.5rem"
+          style="width: 200px; margin: 0 0.5rem"
         />
       </div>
     </div>
@@ -1043,7 +1045,7 @@
       <!-- Additional Courses Section -->
       <section
         class="section additional-courses"
-        style="background: var(--primary-color); color: white"
+        style="background: var(--primary-color); padding-top: 3.3vh; color: white"
       >
         <div class="course-content">
           <h2 class="fade-in" style="color: white">
