--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         margin: 1rem 0;
         color: var(--text-gray);
         font-size: 0.9rem;
-        flex-grow: 1;
+        padding: 1vh;
       }
 
       .course-price {
@@ -323,7 +323,6 @@
         list-style: none;
         text-align: left;
         margin: 1.5rem 0;
-        flex-grow: 1;
       }
 
       .course-features li {
@@ -925,7 +924,7 @@
               >Ver Cursos</a
             >
             <a
-              href="https://wa.me/34611601309?text=Te escribía interesado para concertar una cita para un Piercing"
+              href="https://wa.me/34611601309?text=Te escribía para solicitar información sobre el curso de tatuaje"
               class="cta-button secondary"
               >Contactar</a
             >
@@ -964,22 +963,23 @@
           <div class="course-grid">
             <div class="course-card fade-in">
               <h3>Auxiliar de Tatuaje</h3>
+                            <div class="course-price">750€</div>
+
               <div class="course-details">
                 <p><strong>Duración:</strong> 120 horas</p>
                 <p>
                   <strong>Online:</strong> 90h |
                   <strong>Presencial:</strong> 30h
                 </p>
-                <p>
+                <!-- <p>
                   <strong>Requisitos:</strong> El alumno debe traer su propia
                   máquina de tatuar
                 </p>
                 <p>
                   <strong>Estudios requeridos:</strong> No se requieren estudios
                   previos
-                </p>
+                </p> -->
               </div>
-              <div class="course-price">750€</div>
               <ul class="course-features">
                 <li>Apuntes teóricos incluidos</li>
                 <li>
@@ -993,6 +993,8 @@
 
             <div class="course-card fade-in">
               <h3>Auxiliar + Higiénico Sanitario</h3>
+                            <div class="course-price">1100€</div>
+
               <div class="course-details">
                 <p><strong>Duración:</strong> 210 horas</p>
                 <p>
@@ -1000,16 +1002,15 @@
                   <strong>Presencial:</strong> 30h
                 </p>
                 <p><strong>Sanitario:</strong> 90h adicionales</p>
-                <p>
+                <!-- <p>
                   <strong>Requisitos:</strong> El alumno debe traer su propia
                   máquina de tatuar
                 </p>
                 <p>
                   <strong>Estudios requeridos:</strong> No se requieren estudios
                   previos
-                </p>
+                </p> -->
               </div>
-              <div class="course-price">1100€</div>
               <ul class="course-features">
                 <li>Todo lo del curso básico</li>
                 <li>Certificación higiénico-sanitaria</li>
@@ -1021,15 +1022,16 @@
 
             <div class="course-card fade-in">
               <h3>Higiénico Sanitario</h3>
+                            <div class="course-price">390€</div>
+
               <div class="course-details">
                 <p><strong>Duración:</strong> 90 horas</p>
                 <p><strong>Modalidad:</strong> MF_0064</p>
-                <p>
+                <!-- <p>
                   <strong>Estudios requeridos:</strong> No se requieren estudios
                   previos
-                </p>
+                </p> -->
               </div>
-              <div class="course-price">390€</div>
               <ul class="course-features">
                 <li>Apuntes teóricos completos</li>
                 <li>Aula especializada</li>
@@ -1043,7 +1045,7 @@
       </section>
 
       <!-- Additional Courses Section -->
-      <section
+      <!-- <section
         class="section additional-courses"
         style="background: var(--primary-color); padding-top: 3.3vh; color: white"
       >
@@ -1069,7 +1071,6 @@
             profesional.
           </p>
           <div class="competencies">
-            <!-- COMPETENCIAS TÉCNICAS -->
             <div class="competency fade-in">
               <h4>Competencias Técnicas</h4>
               <p>
@@ -1147,7 +1148,6 @@
               </p>
             </div>
 
-            <!-- COMPETENCIAS ARTÍSTICAS -->
             <div class="competency fade-in">
               <h4>Competencias Artísticas</h4>
               <p>Desarrollo de la observación y dibujo a mano alzada.</p>
@@ -1189,7 +1189,6 @@
               <p>Desarrollo de un portfolio artístico personal.</p>
             </div>
 
-            <!-- COMPETENCIAS PERSONALES Y PROFESIONALES -->
             <div class="competency fade-in">
               <h4>Competencias Personales y Profesionales</h4>
               <p>
@@ -1246,7 +1245,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="section additional-courses">
         <div class="course-content">
           <h2 class="fade-in">Más Cursos Especializados</h2>
@@ -1288,7 +1287,8 @@
             </div>
           </div>
           <div style="margin-top: 3rem">
-            <a href="#" class="cta-button" onclick="scrollToSection(4)"
+            <a   href="https://wa.me/34611601309?text=Te escribía para solicitar información sobre el curso de tatuaje"
+                class="cta-button" onclick="scrollToSection(4)"
               >Solicitar Información</a
             >
           </div>
